@@ -1,13 +1,11 @@
 
-do file changed warning
-
 window subclass ?
-
 
 global tools
 
 documentaion :(
 
+set  tab colours in theme
 
 
 
